# timekeeping

./: .env.example  .gitignore  Cargo.toml  README.md  REQUIREMENTS.md  tatus q
.githooks/: commit-msg
.github/workflows/: release.yml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: DeleteConfirmModal.tsx  EditEmployeeModal.tsx  LoginPopup.tsx  Navbar.tsx
frontend/src/pages/: AttendancePage.tsx  EmployeePage.tsx
src/: auth.rs  config.rs  deposit.rs  errors.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/db/: deposit_repo.rs  mod.rs  schema.rs
src/handlers/: mod.rs
