[package]
name = "timekeeping"
version = "0.1.0"
edition = "2021"
description = "Time-keeping & Payroll System"

[dependencies]
anyhow = "1"
axum = "0.6"
jsonwebtoken = "9"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[lib]
name = "timekeeping"
path = "src/lib.rs"

[[bin]]
name = "timekeeping"
path = "src/main.rs"
