[package]
name = "timekeeping-tauri"
version = "0.1.0"
description = "Tauri wrapper for Timekeeping"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["shell-open"] }
timekeeping = { path = ".." }
